#10852 보고서 구현 1. 보고서 설정 기능 구현

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1098,6 +1098,7 @@ report:
     configDescription: "Set up reports using custom charts."
     editDescription: "Register, modify, or delete reports."
     searchDescription: "Search report that you generated."
+    templateNameUsed: "Duplicate template name exists."
 # Role
 role:
   btn:
