--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -46,6 +46,9 @@ common:
     updateUser: "Update User"
     writeDate: "Write Date"
     writer: "Writer"
+    itsm: "ITSM"
+    zenius: "Zenius"
+    emptyData: "-"
   msg:
     confirmDelete: "Are you sure you want to delete?"
     customColorSave: "Your color has not been saved yet.<br/>Your color will be reset."
@@ -349,6 +352,7 @@ cmdb:
       sourceCiName: "Source CI Name"
       targetCiId: "Target CI ID"
       targetCiName: "Target CI Name"
+      linkageObject: "Linkage Object"
     msg:
       deleteEditableCI: "Do you want to delete the entered asset information from the list?"
       deleteReadableCI: "Do you want to delete asset information from the list?"
