--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -46,6 +46,9 @@ common:
     updateUser: "수정자"
     writeDate: "작성 일시"
     writer: "작성자"
+    itsm: "ITSM"
+    zenius: "Zenius"
+    emptyData: "-"
   msg:
     confirmDelete: "정말 삭제하시겠습니까?"
     dataSelect: "데이터를 선택하세요."
@@ -348,6 +351,7 @@ cmdb:
       sourceCiName: "기준 CI 이름"
       targetCiId: "대상 CI ID"
       targetCiName: "대상 CI 이름"
+      linkageObject: "연동 대상"
     msg:
       deleteEditableCI: "입력된 자산정보를 목록에서 삭제하시겠습니까?"
       deleteReadableCI: "자산정보를 목록에서 삭제하시겠습니까?"
