#11012 연동시 CMDB CI 수정 이력 출력 변경 -> 수정 진행

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -47,7 +47,7 @@ common:
     writeDate: "Write Date"
     writer: "Writer"
     itsm: "ITSM"
-    zenius: "Zenius"
+    ems: "EMS"
     emptyData: "-"
   msg:
     confirmDelete: "Are you sure you want to delete?"
