--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -47,7 +47,7 @@ common:
     writeDate: "작성 일시"
     writer: "작성자"
     itsm: "ITSM"
-    zenius: "Zenius"
+    ems: "EMS"
     emptyData: "-"
   msg:
     confirmDelete: "정말 삭제하시겠습니까?"
