--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -49,8 +49,6 @@ common:
     updateUser: "수정자"
     writeDate: "작성 일시"
     writer: "작성자"
-    itsm: "ITSM"
-    ems: "EMS"
     emptyData: "-"
   msg:
     confirmDelete: "정말 삭제하시겠습니까?"
@@ -354,7 +352,9 @@ cmdb:
       sourceCiName: "기준 CI 이름"
       targetCiId: "대상 CI ID"
       targetCiName: "대상 CI 이름"
-      linkageObject: "연동 대상"
+      whetherToInterlock: "연동 여부"
+      interlock: "연동"
+      nonInterlock: "비연동"
     msg:
       deleteEditableCI: "입력된 자산정보를 목록에서 삭제하시겠습니까?"
       deleteReadableCI: "자산정보를 목록에서 삭제하시겠습니까?"
