#11000  프로세스 디자이너 저장 벨리데이션 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1001,6 +1001,7 @@ process:
     enterProcessName: "Please enter a process name."
     failedDestroy: "Related documents exist for this process.<br/>This can't be destroyed."
     noticeImportFile: "Import only possible in XML file"
+    startEventnMustOne: 'There must be 1 start event.'
     searchDescription: "View and manage processes."
     selectImportFile: "Please select an import file."
   title:
