--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -352,9 +352,9 @@ cmdb:
       sourceCiName: "Source CI Name"
       targetCiId: "Target CI ID"
       targetCiName: "Target CI Name"
-      whetherToInterlock: "Whether to Interlock"
-      interlock: "Interlock"
-      nonInterlock: "Non Interlock"
+      whetherToInterlock: "Whether to Interlink"
+      interlock: "Interlink"
+      nonInterlock: "Non Interlink"
     msg:
       deleteEditableCI: "Do you want to delete the entered asset information from the list?"
       deleteReadableCI: "Do you want to delete asset information from the list?"
