--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1268,7 +1268,7 @@ user:
     searchDescription: "사용자를 조회 및 관리합니다."
     signUp: "가입되었습니다.<br/>가입 시 등록한 메일에서 인증을 진행하세요."
     signUpFail: "가입 실패되었습니다."
-    updatePasswordNotice: "개인정보보호와 안전한 시스템 사용을 위해 {0} 일 마다 비밀번호 변경을</br> 권장하고 있사오니, 비밀번호를 변경하세요."
+    updatePasswordNotice: "개인정보보호와 안전한 시스템 사용을 위해 {0}일 마다 비밀번호 변경을 권장하고 있사오니, 비밀번호를 변경하세요."
     usageStatus: "※ 미사용 시, 로그인 및 모든 시스템 사용이 불가능합니다."
   tooltip:
     idRule: "• 영문, 숫자, 특수문자(@, ., -, _) 사용 가능.<br/><br/>
@@ -1284,9 +1284,8 @@ user:
      &nbsp;&nbsp; 예) 이메일ID가 zenius인 경우,<br/>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  zeniu는 포함 가능, zenius는 포함 불가<br/><br/>
      • 공백을 허용하지 않는다.<br/>"
-    pwRuleSummary: "• 2가지 이상의 문자 종류(대문자, 소문자, 특수문자, 숫자)인 경우,<br/>
-     &nbsp; 8자 이상 20자 미만, 1가지 종류의 문자 구성인 경우 10자 이상<br/>
-     &nbsp; 20자 미만의 비밀번호 입력 제한 범위를 가진다.<br/><br/>
+    pwRuleSummary: "• 2가지 이상의 문자 종류(대문자, 소문자, 특수문자, 숫자)인 경우, 8자 이상 20자 미만, 1가지 종류의 문자 구성인 경우<br/><br/>
+    10자 이상 20자 미만의 비밀번호 입력 제한 범위를 가진다.<br/><br/>
      • 사용자의 ID를 포함하지 않는다.<br/><br/>
      • 사용자의 이메일 ID를 포함하지 않는다.<br/><br/>
      • 공백을 허용하지 않는다.<br/>"
