#10852 보고서 구현 1. 보고서 목록 미리보기 추가 2. 차트 출력

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1090,6 +1090,7 @@ report:
     config: "Report Config"
     description: "Description"
     download: "Download"
+    preview: "Preview"
     publishDate: "Publish Date"
     report: "Report"
     reportName: "Report Name"
