--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1089,6 +1089,7 @@ report:
     config: "보고서 설정"
     description: "설명"
     download: "다운로드"
+    preview: "미리보기"
     publishDate: "발행 일시"
     report: "보고서"
     reportName: "보고서 명"
