--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1284,8 +1284,8 @@ user:
      &nbsp;&nbsp; 예) 이메일ID가 zenius인 경우,<br/>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  zeniu는 포함 가능, zenius는 포함 불가<br/><br/>
      • 공백을 허용하지 않는다.<br/>"
-    pwRuleSummary: "• 2가지 이상의 문자 종류(대문자, 소문자, 특수문자, 숫자)인 경우, 8자 이상 20자 미만, 1가지 종류의 문자 구성인 경우<br/><br/>
-    10자 이상 20자 미만의 비밀번호 입력 제한 범위를 가진다.<br/><br/>
+    pwRuleSummary: "• 2가지 이상의 문자 종류(대문자, 소문자, 특수문자, 숫자)인 경우, 8자 이상 20자 미만, 1가지 종류의 문자 구성인 경우<br/></br>
+    <label style= 'padding-left: 8px; margin: 0px;'> 10자 이상 20자 미만의 비밀번호 입력 제한 범위를 가진다. </label><br/></br>
      • 사용자의 ID를 포함하지 않는다.<br/><br/>
      • 사용자의 이메일 ID를 포함하지 않는다.<br/><br/>
      • 공백을 허용하지 않는다.<br/>"
