#10544 폼 리팩토링 - 처리할 문서 - 이력 / 관련 문서 / 댓글 / 태그 기능

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1170,6 +1170,7 @@ token:
     elementName: "Task Name"
     endDt: "Finish Date"
     history: "History"
+    information: "Information"
     list: "My Document List"
     print: "Process Document Print"
     relatedInstance: "Related Documents"
