#10852 보고서 구현 1. 보고서 템플릿에 임시 생성 버튼 추가(보고서 생성 가능) 2. 보고서 목록 검색조건을 selectbox로 변경

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1102,6 +1102,9 @@ report:
     editDescription: "Register, modify, or delete reports."
     searchDescription: "Search report that you generated."
     templateNameUsed: "Duplicate template name exists."
+  template:
+    all: "All"
+
 # Role
 role:
   btn:
