#11023 제품 정보 모달창 디자인 적용 -> 일감 구현 진행

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1390,3 +1390,4 @@ product:
     mainPhone: "MainPhone : 02-2205-6001"
     technicalSupport: "TechnicalSupport : 02-2205-6031"
     productInquiry: "ProductInquiry : 02-2205-6009, 6015"
+    copyright: "ⓒ 2020 Brainzcompany. All rights reserved."
