--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1390,3 +1390,4 @@ product:
     mainPhone: "대표전화 : 02-2205-6001"
     technicalSupport: "기술지원 : 02-2205-6031"
     productInquiry: "제품문의 : 02-2205-6009, 6015"
+    copyright: "ⓒ 2020 Brainzcompany. All rights reserved."
