--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -889,7 +889,7 @@ menu:
   report:
     parent: "보고서"
     report: "보고서 조회"
-    template: "보고서 설정"
+    template: "템플릿 설정"
   setting:
     editMyInfo: "자기정보 수정"
   token:
@@ -1086,7 +1086,6 @@ report:
   label:
     automatic: "자동 생성"
     chart: "사용자 정의 차트"
-    config: "보고서 설정"
     description: "설명"
     download: "다운로드"
     preview: "미리보기"
@@ -1094,12 +1093,13 @@ report:
     report: "보고서"
     reportName: "보고서 명"
     search: "보고서 조회"
-    searchPlaceholder: "보고서명"
+    searchPlaceholder: "템플릿 명"
+    template: "템플릿"
     templateName: "템플릿 명"
   msg:
-    configDescription: "사용자 정의 차트를 이용한 보고서를 설정합니다."
+    configDescription: "사용자 정의 차트를 이용한 템플릿을 설정합니다."
     duplicateChart: "중복된 차트가 존재합니다."
-    editDescription: "보고서를 등록하거나 수정, 삭제합니다."
+    editDescription: "템플릿을 등록하거나 수정, 삭제합니다."
     emptyChart: "차트가 존재하지 않습니다."
     searchDescription: "생성한 보고서를 조회합니다."
     templateNameUsed: "중복되는 템플릿명이 존재합니다."
