--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -745,7 +745,7 @@ form:
       color: "색상"
       columns: "컬럼 설정"
       columnName: "컬럼명"
-      columnOrder: "순서"
+      columnOrder: "순서 변경"
       columnType: "입력 유형"
       defaultValue: "기본값"
       DefaultValueCustomCode: "Custom Code"
@@ -763,9 +763,9 @@ form:
     email: "Email"
     group:
       columnContent: "컬럼 내용"
-      columnElement: "입력 유형 엘리먼트"
+      columnElement: "사용자 유형"
       columnHead: "컬럼 제목"
-      columnValidation: "입력 유형 엘리먼트 유효성"
+      columnValidation: "입력 데이터 유효성 검사"
       display: "출력속성"
       element: "엘리먼트"
       label: "라벨"
