#10892 트리 + 편집 화면 공통 레이아웃 정리

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -53,6 +53,7 @@ common:
     emptyData: "-"
   msg:
     confirmDelete: "Are you sure you want to delete?"
+    confirmNotSave: "You have unsaved changes. Do you want to move without saving?"
     dataSelect: "Please select data."
     delete: "Deleted."
     deleteTartget: "Please select target."
