#10852 보고서 구현 1. merge 충돌 수정 2. 페이지 적용 3. ERD 스크립트 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1104,7 +1104,9 @@ report:
     search: "Report Search"
     searchPlaceholder: "Template name"
     template: "Template"
+    templateEdit: "Template Edit"
     templateName: "Template Name"
+    templateRegister: "Template Register"
   msg:
     configDescription: "Set up templates using custom charts."
     editDescription: "Register, modify, or delete templates."
