MR 수정 1. Status 상수명을 명확하게 변경(ReportConstants 생성) 2. message의 en에 누락된 내용 추가 3. ReportCondition을 ReportSearchCondition으로 변경 4. Report 페이지 검색조건에 isPaging 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1110,7 +1110,9 @@ report:
     templateRegister: "Template Register"
   msg:
     configDescription: "Set up templates using custom charts."
+    duplicateChart: "Duplicate chart exists."
     editDescription: "Register, modify, or delete templates."
+    emptyChart: "Chart does not exist."
     searchDescription: "Search report that you generated."
     templateNameUsed: "Duplicate template name exists."
   template:
