#10977 폼 디자이너 세부 속성 디자인 구현
- selectbox / checkbox / radio 컴포넌트 세부속성 > 엘리먼트 옵션 테이블 디자인 수정

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -821,6 +821,12 @@ form:
       day: "일"
       days: "일 후"
       hours: "시간 후"
+    optionList:
+      enterValue: "항목 이름을 입력하세요."
+      name: "항목 이름"
+      namePlaceholder: "이름 입력"
+      value: "항목 값"
+      valuePlaceholder: "값 입력"
   status:
     destroy: "폐기"
     edit: "편집"
