--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -874,8 +874,6 @@ login:
 menu:
   board:
     parent: "Board"
-  chart:
-    parent: "User custom chart"
   config:
     auth: "Auth"
     boardAdmin: "Board management"
@@ -896,6 +894,7 @@ menu:
   notice:
     parent: "Notice"
   report:
+    chart: "User custom chart"
     parent: "Report"
     report: "Report List"
     template: "Report Template"
