#11083 컴포넌트 속성 라벨 동적으로 텍스트 설정이 가능하도록 수정

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -807,6 +807,7 @@ form:
     validate: "유효성"
     validation:
       required: "필수 여부"
+      requiredInput: "필수 입력"
       maxLength: "최대 길이"
       minLength: "최소 길이"
       validationType: "유효성 타입"
