--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -807,6 +807,7 @@ form:
     validate: "Validate"
     validation:
       required: "Required"
+      requiredInput: "Required Field"
       maxLength: "Max Length"
       minLength: "Min Length"
       validationType: "Validation Type"
