--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -99,6 +99,9 @@ product.version: 3.0.0
 # 비밀번호 만료 기간
 password.expired.period: 90
 
+# 로그인 플랫폼 사용여부
+login.platform.enabled: false
+
 jasypt.encryptor.bean: jasyptStringEncryptor
 
 ---
