--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1138,10 +1138,8 @@ role:
     role: "Role"
   msg:
     duplicateRoleId: "Duplicate role id! Please enter other role id."
-    duplicateChart: "Duplicate chart exists."
     duplicateRoleName: "Duplicate role name! Please enter other role name."
     editDescription: "Add, view and manage roles."
-    emptyChart: "Chart does not exist."
     enterRoleId: "Please enter a role id."
     enterRoleName: "Please enter a role name."
     searchPlaceholder: "Role Name / Role Desc."
@@ -1218,7 +1216,7 @@ token:
     print: "Process Document Print"
     relatedInstance: "Related Documents"
     relatedInstancePlaceholder: "Document Name / Create User"
-    searchPlaceholder: "Create User / Contents"
+    searchPlaceholder: "Document No / Create User / Contents"
     startDt: "Start Date"
     tagPlaceHolder: "#Tags"
     view: "Document View"
