#11088 게시판 카테고리 미출력(현규씨 2차 피드백 반영)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -24,6 +24,8 @@ common:
   label:
     attachFile: "Attach file"
     blank: " "
+    bracketOpen: "["
+    bracketClose: "]"
     comment: "Comment"
     contents: "Contents"
     colon: ":"
