--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -24,6 +24,8 @@ common:
   label:
     attachFile: "첨부 파일"
     blank: " "
+    bracketOpen: "["
+    bracketClose: "]"
     comment: "댓글"
     contents: "내용"
     colon: ":"
