--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1064,6 +1064,7 @@ process:
       end-name: "End Name"
       exclusiveGateway: "XOR Gateway"
       file: "File"
+      groupArtifact: "Group"
       id: "ID"
       inclusiveGateway: "OR Gateway"
       is-default: "is Default"
