--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -360,6 +360,7 @@ cmdb:
       deleteEditableCI: "입력된 자산정보를 목록에서 삭제하시겠습니까?"
       deleteReadableCI: "자산정보를 목록에서 삭제하시겠습니까?"
       deleteInformation: "작성 중인 자산정보 내용이 모두 삭제됩니다."
+      duplicateRelatedCIData: "동일한 연관 관계 및 대상 CI가 존재합니다."
       enterCiName: "CI 이름을 입력하세요."
       searchDescription: "CI를 조회 및 관리합니다."
       selectCI: "CI를 선택하세요."
