#10927 - 코드 데이터 사용여부 (백/프론트 값 처리)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -424,6 +424,7 @@ code:
     pCode: "Parent Code"
     searchPlaceholder: "Code"
     seqNum: "The order of the output"
+    useYn: "Use enable"
   msg:
     duplicateCode: "Duplicate code Exists."
     editDescription: "Add, view and manage code."
