#11114 폼 디자이너 세부 속성 > 옵션 목록 삭제 기능 개선

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -666,6 +666,7 @@ form:
     maxLength: "Please enter less than {0} characters."
     min: "Please enter at least {0}."
     minLength: "Please enter at least {0} characters."
+    noOption: "There is no option."
     number: "Please enter only numbers."
     required: "Please enter the required item."
     saveInfo: "Saved at {0}"
