--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -666,6 +666,7 @@ form:
     maxLength: "{0}글자 이하로 입력하세요."
     min: "{0} 이상 입력하세요."
     minLength: "{0}글자 이상 입력하세요."
+    noOption: "항목이 없습니다."
     number: "숫자만 입력하세요."
     required: "필수 항목을 입력하세요."
     saveInfo: "{0} 에 저장됨"
