--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1311,6 +1311,7 @@ user:
     sameEmail: "이미 사용중인 이메일입니다."
     sameUserId: "동일한 아이디가 존재합니다."
     searchDescription: "사용자를 조회 및 관리합니다."
+    selectRole: "사용자 역할은 반드시 1개 이상이여야 합니다. <br/> 사용자 역할을 선택해주세요."
     signUp: "가입되었습니다.<br/>가입 시 등록한 메일에서 인증을 진행하세요."
     signUpFail: "가입 실패되었습니다."
     updatePasswordNotice: "개인정보보호와 안전한 시스템 사용을 위해 {0}일 마다 비밀번호 변경을 권장하고 있사오니, 비밀번호를 변경하세요."
