#11104 [보고서] 템플릿을 사용하여 보고서 생성시 옵션 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1127,6 +1127,8 @@ report:
     templateNameUsed: "Duplicate template name exists."
   template:
     all: "All"
+  tooltip:
+    reportName: "When creating a report, set the name of the report to be displayed.<br/>If the report name is not entered, the template name is used as the report name."
 
 # Role
 role:
