MR 피드백 1. 스크립트 닫기 추가 2. 문구 message 파일로 분리 3. 보고서 생성시 차트 순서 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1103,6 +1103,7 @@ process:
 report:
   btn:
     preview: "Preview"
+    pdf: "PDF"
   label:
     automatic: "Automatic generation"
     chart: "Chart"
