--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -56,7 +56,7 @@ common:
   msg:
     confirmDelete: "Are you sure you want to delete?"
     confirmNotSave: "You have unsaved changes. Do you want to move without saving?"
-    dataSelect: "Please select {0}."
+    dataSelect: "Please select data."
     delete: "Deleted."
     deleteTartget: "Please select target."
     emptyValue: "There is an empty value"
