--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -56,11 +56,11 @@ common:
   msg:
     confirmDelete: "정말 삭제하시겠습니까?"
     confirmNotSave: "저장되지 않은 변경사항이 있습니다. 저장하지 않고 이동하시겠습니까?"
-    dataSelect: "{0} 을(를) 선택하세요."
+    dataSelect: "데이터를 선택하세요."
     delete: "삭제되었습니다."
     deleteTartget: "삭제 대상을 선택하세요."
     emptyValue: "빈 값이 있습니다."
-    enterC ontents: "내용을 입력하세요."
+    enterContents: "내용을 입력하세요."
     enterTitle: "제목을 입력하세요."
     fail: "실패하였습니다."
     minValue: "최소 입력값은 {0} 입니다."
