--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -127,6 +127,11 @@ spring:
   datasource:
     url: jdbc:log4jdbc:postgresql://10.0.10.175:32787/itsm
 ---
+spring:
+  profiles: jhpark
+  datasource:
+    url: jdbc:log4jdbc:postgresql://10.0.10.175:32847/itsm
+---
 # For brainz open
 spring:
   profiles: brainz7
