--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -236,6 +236,7 @@ board:
     replyDescription: "답글을 추가 할 수 있습니다."
     searchDescription: "게시글을 조회 및 관리합니다."
     viewDescription: "게시글에 대한 상세 정보를 조회합니다."
+    createCategory: "카테고리를 등록해 주세요."
 
 # Chart
 chart:
