#11219 - 카테고리 등록 영어메시지 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -236,6 +236,7 @@ board:
     replyDescription: "You can add a reply."
     searchDescription: "View and manage posts."
     viewDescription: "Inquire detailed information about the post."
+    createCategory: "Please register the category."
 
 # Chart
 chart:
