--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -34,6 +34,7 @@ common:
     createDtDesc: "Order by create date"
     createUser: "Create User"
     customColor: "Custom User Color"
+    data: "data"
     delete: "Delete"
     edit: "Edit"
     fail: "Fail"
@@ -56,10 +57,9 @@ common:
   msg:
     confirmDelete: "Are you sure you want to delete?"
     confirmNotSave: "You have unsaved changes. Do you want to move without saving?"
-    dataSelect: "Please select data."
+    dataSelect: "Please select {0}."
     delete: "Deleted."
     deleteTartget: "Please select target."
-    departmentSelect: "Please select a department name"
     emptyValue: "There is an empty value"
     enterContents: "Please enter contents"
     enterTitle: "Please enter a title."
@@ -516,6 +516,7 @@ department:
   label:
     deptList: "department List"
     deptManagement: "department Management"
+    deptName: "department Name"
 
 # Document
 document:
