--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -483,6 +483,15 @@ dashboard:
   label:
     dashboard: "개인 현황판"
     documentStatus: "신청한 문서 현황"
+    etc: "기타"
+    monthDoneDocument: "월간 처리한 문서"
+    request: "서비스 요청"
+    runningDocument: "진행 중 문서"
+    statistics: "업무 통계"
+    todoDocument: "처리할 문서"
+    doneDocument: "전체 처리한 문서"
+    incident: "장애 신고"
+    inquiry: "단순 문의"
   msg:
     viewDescription: "나의 업무통계 및 처리할 문서를 조회합니다."
   status:
