#11192 CMDB - Attribute - List 타입 속성 등록하기 기능 : 정렬 속성 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -306,6 +306,7 @@ cmdb:
         validate: "Validate"
         value: "Value"
       searchPlaceholder: "Label / Type / Attribute Name / Description"
+      seq: "Sort Order"
       type: "Type"
       view: "Attribute"
     msg:
