#11030 차트 편집 모달을 편집 화면으로 변경

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -248,8 +248,10 @@ chart:
     defaultInfo: "Default Info"
     description: "Chart Description"
     edit: "Chart Edit"
+    editDescription: "Register or Edit for custom chart."
     name: "Chart Name"
     queryInfo: "Query Info"
+    register: "New Chart"
     targetTags: "Target Tags"
     type: "Chart Type"
     periodUnit: "PeriodUnit"
