--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -248,8 +248,10 @@ chart:
     defaultInfo: "기본 정보"
     description: "차트 설명"
     edit: "차트 편집"
+    editDescription: "사용자 정의 차트를 등록하거나 수정, 삭제합니다."
     name: "차트 이름"
     queryInfo: "쿼리 정보"
+    register: "차트 등록"
     targetTags: "대상 태그"
     type: "차트 종류"
     periodUnit: "간격"
