--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -138,6 +138,12 @@ spring:
     url: jdbc:log4jdbc:postgresql://10.0.10.175:32846/itsm
 file.upload.dir: C:\files
 ---
+spring:
+  profiles: wdj
+  datasource:
+    url: jdbc:log4jdbc:postgresql://10.0.10.175:32793/itsm
+file.upload.dir: C:\files
+---
 # For brainz open
 spring:
   profiles: brainz7
