#11030 기간설정 옵션 변경 및 날짜 입력 항목 추가 & 수정화면 정리

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -37,6 +37,7 @@ common:
     customColor: "Custom User Color"
     delete: "Delete"
     edit: "Edit"
+    endDate: "End date"
     fail: "Fail"
     group: "Group"
     modify: "Modify"
@@ -44,6 +45,7 @@ common:
     nameAsc: "Order by name"
     preview: "Preview"
     searchWord: "Please enter your search term"
+    startDate: "Start date"
     success: "Success"
     tag: "Tag"
     title: "Title"
