--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -37,6 +37,7 @@ common:
     customColor: "사용자 색상"
     delete: "삭제"
     edit: "편집"
+    endDate: "종료일자"
     fail: "실패"
     group: "그룹"
     modify: "수정"
@@ -44,6 +45,7 @@ common:
     nameAsc: "이름 순"
     preview: "미리보기"
     searchWord: "검색어를 입력하세요."
+    startDate: "시작일자"
     success: "성공"
     tag: "태그"
     title: "제목"
