--- a/plugins/createReport/configuration.properties
+++ b/plugins/createReport/configuration.properties
@@ -4,3 +4,5 @@ port=32784
 database=itsm
 username=97iU8ckIQyNKR+jJF7xz/w==
 password=64TAJlkjjxtS6FXzG0tTNA==
+algorithm=PBEWithMD5AndDES
+key=Alice
