--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -686,6 +686,7 @@ form:
     searchDescription: "문서양식를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
     unique: "중복된 데이터는 포함할 수 없습니다."
+    duplicateFormName: "중복되는 문서양식 명이 있습니다.<br>다른 문서양식 명을 입력하세요."
   form: "Form"
   group: "Group"
   row: "Row"
