--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -316,7 +316,7 @@ cmdb:
       enterAttributeName: "Attribute 명을 입력하세요."
       searchDescription: "CI Attribute을 조회 및 관리합니다."
       selectAttributeType: "타입을 선택하세요."
-      viewDescription: "Attribute에 대한 상세정보를 조회합니다."
+      viewDescription: "Attribute에 대한 상세 정보를 조회합니다."
     btn:
       import: "가져오기"
       export: "내보내기"
@@ -368,6 +368,7 @@ cmdb:
       searchDescription: "CI를 조회 및 관리합니다."
       selectCI: "CI를 선택하세요."
       tag: "태그를 입력하세요."
+      viewDescription: "CI에 대한 상세 정보를 조회합니다."
     btn:
       import: "가져오기"
       export: "내보내기"
