--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -6,10 +6,10 @@ common:
     check: "확인"
     close: "닫기"
     delete: "삭제"
-    editUserInfo: "회원 정보 수정"
+    editUserInfo: "내 정보 수정"
     list: "목록"
     logout: "로그아웃"
-    modify: "수정"
+    modify: "수정 완료"
     preview: "미리보기"
     print: "인쇄"
     process: "처리"
@@ -20,7 +20,7 @@ common:
     saveAs: "다른 이름으로 저장"
     select: "선택"
     terminate: "종결"
-    update: "변경"
+    toModify: "수정"
     withdraw: "회수"
   label:
     attachFile: "첨부 파일"
@@ -52,7 +52,6 @@ common:
     title: "제목"
     totalCountWithoutCondition: "({0}) 총 {1} 건"
     totalPageNum: "총 {0} 페이지"
-    update: "변경"
     updateDate: "수정 일시"
     updateUser: "수정자"
     writeDate: "작성 일시"
@@ -198,7 +197,7 @@ authentication:
 # Board
 board:
   btn:
-    category: "카테고리"
+    category: "분류"
     reply: "답글"
   label:
     attachFileSize: "첨부파일 용량"
@@ -207,8 +206,8 @@ board:
     boardEdit: "게시판 수정"
     boardRegister: "게시판 등록"
     boardView: "게시판 조회"
-    category: "카테고리"
-    categoryName: "카테고리 명"
+    category: "분류"
+    categoryName: "분류 명"
     commentCount: "댓글 수"
     commentYn: "댓글 사용 여부"
     count: "게시물 수"
@@ -222,7 +221,7 @@ board:
     register: "게시글 등록"
     reply: "답글 등록"
     replyYn: "답글 사용 여부"
-    searchBoardPlaceholder: "카테고리 / 제목 / 작성자"
+    searchBoardPlaceholder: "분류 / 제목 / 작성자"
     searchPlaceholder: "게시판 명 / 등록자"
     title: "제목"
     useYn: "사용 여부"
@@ -236,12 +235,12 @@ board:
     editDescription: "게시글을 등록하거나 수정, 삭제합니다."
     enterAttachFileSize: "첨부파일 용량을 0MB 초과 1024MB 이하로 입력하세요."
     enterBoardTitle: "게시판 명을 입력하세요."
-    enterCategoryName: "카테고리 명을 입력하세요."
+    enterCategoryName: "분류 명을 입력하세요."
     modifyDescription: "글을 변경 할 수 있습니다."
     replyDescription: "답글을 추가 할 수 있습니다."
     searchDescription: "게시글을 조회 및 관리합니다."
     viewDescription: "게시글에 대한 상세 정보를 조회합니다."
-    createCategory: "카테고리를 등록해 주세요."
+    createCategory: "분류 항목을 등록해 주세요."
 
 # Chart
 chart:
@@ -590,7 +589,7 @@ document:
 # Download
 download:
   label:
-    category: "카테고리"
+    category: "분류"
     download: "자료실"
     edit: "자료실 수정"
     register: "자료실 등록"
@@ -602,7 +601,7 @@ download:
     editDescription: "자료를 등록하거나 수정, 삭제합니다."
     portalDescription: "자료를 조회합니다."
     searchDescription: "자료를 조회 및 관리합니다."
-    selectCategory: "카테고리를 선택하세요."
+    selectCategory: "분류를 선택하세요."
     viewDescription: "자료에 대한 상세 정보를 조회합니다."
   category:
     all: "전체"
@@ -622,15 +621,15 @@ error:
 # FAQ
 faq:
   label:
-    category: "카테고리"
+    category: "분류"
     edit: "FAQ 수정"
     faq: "FAQ"
     register: "FAQ 등록"
-    searchPlaceholder: "카테고리 / 제목"
+    searchPlaceholder: "분류 / 제목"
     title: "제목"
     view: "FAQ 조회"
   msg:
-    duplicateTitleInCategory: "해당 카테고리내 동일한 제목이 있습니다.<br>카테고리 또는 제목을 변경해 주세요."
+    duplicateTitleInCategory: "같은 분류에 동일한 제목이 있습니다.<br>분류 또는 제목을 변경해 주세요."
     editDescription: "FAQ를 등록하거나 수정, 삭제합니다."
     portalDescription: "FAQ를 조회합니다."
     searchDescription: "FAQ를 조회 및 관리합니다."
@@ -950,7 +949,7 @@ menu:
 notice:
   label:
     edit: "공지사항 수정"
-    endDt: "종료일"
+    endDateTime: "종료일시"
     height: "높이"
     notice: "공지사항"
     noticePeriod: "공지 기간"
@@ -960,7 +959,7 @@ notice:
     popUpPeriodToday: "오늘 하루 이창을 열지 않음"
     register: "공지사항 등록"
     searchPlaceholder: "제목 / 작성자"
-    strtDt: "시작일"
+    startDateTime: "시작일시"
     topNoticeSettings: "상단 공지 설정"
     view: "공지사항 조회"
     width: "넓이"
@@ -993,14 +992,14 @@ notification:
 # Portal
 portal:
   btn:
-    main: "첫 화면으로"
+    main: "포탈 화면으로 이동"
   label:
     bottomPhrase: "원하는 걸 찾을 수 없나요?"
     browserGuidePhrase: "사용 중인 웹 브라우저를 지원하지 않습니다. 아래의 브라우저를 사용해 주세요."
     chrome: "Chrome"
     firefox: "Firefox"
     login: "로그인"
-    main: "메인화면"
+    main: "ITSM 화면으로 이동"
     mainPhrase: "기술 지원"
     msEdge: "MS Edge"
     safari: "Safari"
