--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -125,10 +125,10 @@ auth:
     update: "권한 변경"
     delete: "권한 삭제"
   class:
-    read: "CMDB Class 조회"
-    create: "CMDB Class 등록"
-    update: "CMDB Class 변경"
-    delete: "CMDB Class 삭제"
+    read: "CMDB 속성그룹 조회"
+    create: "CMDB 속성그룹 등록"
+    update: "CMDB 속성그룹 변경"
+    delete: "CMDB 속성그룹 삭제"
   code:
     read: "코드 조회"
     create: "코드 등록"
@@ -295,10 +295,10 @@ cmdb:
       description: "설명"
       details: "세부정보"
       export: "내보내기"
-      label: "라벨"
-      management: "Attribute 관리"
+      label: "출력용 이름"
+      management: "속성항목 관리"
       mappingId: "매핑 아이디"
-      name: "Attribute 명"
+      name: "속성항목 명"
       option:
         check: "Check"
         code: "코드"
@@ -310,16 +310,16 @@ cmdb:
         session: "세션"
         validate: "유효성"
         value: "Value"
-      searchPlaceholder: "라벨 / 타입 / Attribute 명 / 설명"
+      searchPlaceholder: "출력용 이름 / 데이터 타입 / 속성항목 명 / 설명"
       seq: "정렬 순서"
-      type: "타입"
-      view: "Attribute"
+      type: "데이터 타입"
+      view: "속성항목"
     msg:
-      attributeNameUsed: "사용 중인 Attribute 명입니다."
-      enterAttributeName: "Attribute 명을 입력하세요."
-      searchDescription: "CI Attribute을 조회 및 관리합니다."
-      selectAttributeType: "타입을 선택하세요."
-      viewDescription: "Attribute에 대한 상세 정보를 조회합니다."
+      attributeNameUsed: "사용 중인 속성항목 명입니다."
+      enterAttributeName: "속성항목 명을 입력하세요."
+      searchDescription: "CI 속성항목을 조회 및 관리합니다."
+      selectAttributeType: "데이터 타입을 선택하세요."
+      viewDescription: "속성항목에 대한 상세 정보를 조회합니다."
     btn:
       import: "가져오기"
       export: "내보내기"
@@ -352,7 +352,7 @@ cmdb:
         use: "사용"
       tag: "태그"
       tagPlaceholder: "#태그"
-      type: "CI 타입"
+      type: "CI 유형"
       register: "CI 등록"
       update: "CI 변경"
       view: "CI 상세 조회"
@@ -379,41 +379,41 @@ cmdb:
     label:
       attributeList: "속성 목록"
       description: "설명"
-      management: "Class 관리"
-      name: "이름"
-      pClassName: "부모 Class"
-      searchPlaceholder: "Class 명 / 설명"
+      management: "속성그룹 관리"
+      name: "속성그룹 명"
+      pClassName: "부모 그룹"
+      searchPlaceholder: "속성그룹 명 / 설명"
       seq: "정렬 순서"
     msg:
       confirmDeleteAttribute: "속성을 삭제하시겠습니까?"
-      editDescription: "CI Class를 조회 및 관리합니다."
+      editDescription: "CI 속성그룹을 조회 및 관리합니다."
       enterAttributeList: "부모 속성목록을 제외한 본인 속성목록은<br>반드시 1개 이상이여야 합니다."
-      enterClassName: "Class 이름을 입력하세요."
+      enterClassName: "속성그룹 명을 입력하세요."
       enterClassSeq: "정렬 순서를 입력하세요."
-      relatedTypes: "관련된 Type이 있습니다."
+      relatedTypes: "관련된 CI 유형이 있습니다."
     btn:
       import: "가져오기"
       export: "내보내기"
   type:
     label:
       alias: "식별자"
-      class: "Class"
+      class: "CI 속성그룹"
       description: "설명"
       icon: "아이콘"
-      management: "Type 관리"
-      name: "Type 명"
-      parentType: "부모 Type"
-      searchPlaceholder: "Type"
+      management: "CI 유형 관리"
+      name: "유형 명"
+      parentType: "부모 유형"
+      searchPlaceholder: "유형 명"
       seq: "정렬 순서"
     msg:
-      enterPType: "부모 Type을 선택하세요."
+      enterPType: "부모 유형을 선택하세요."
       enterTypeAlias: "식별자를 입력하세요."
-      enterTypeName: "Type 명을 입력하세요."
+      enterTypeName: "유형 명을 입력하세요."
       enterTypeSeq: "정렬 순서를 입력하세요."
-      searchDescription: "CI Type을 조회 및 관리합니다."
-      selectAvailableClass: "유효한 Class를 선택하세요."
-      selectAvailableType: "유효한 Type를 선택하세요."
-      selectType: "Type을 선택하세요."
+      searchDescription: "CI 유형을 조회 및 관리합니다."
+      selectAvailableClass: "유효한 속성그룹을 선택하세요."
+      selectAvailableType: "유효한 유형을 선택하세요."
+      selectType: "유형을 선택하세요."
     btn:
       import: "가져오기"
       export: "내보내기"
@@ -940,10 +940,10 @@ menu:
     workflowAdmin: "업무흐름"
   cmdb:
     parent: "CMDB"
-    attribute: "Attribute"
-    ci: "CI"
-    class: "Class"
-    type: "Type"
+    attribute: "CI 속성항목"
+    ci: "CI 조회"
+    class: "CI 속성그룹"
+    type: "CI 유형"
 
 # Notice
 notice:
