--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -105,7 +105,7 @@ auth:
     auth: "권한"
     authDesc: "권한 설명"
     authId: "권한 아이디"
-    authName: "권한 명"
+    authName: "권한 이름"
     count: "{0} 개"
     menuList: "사용 메뉴 목록"
     referenceCount: "역할 참조 개수"
@@ -113,12 +113,12 @@ auth:
   msg:
     accessDenied: "접근 권한이 없습니다."
     duplicateAuthId: "중복되는 아이디가 있습니다. 다른 권한 아이디를 입력하세요."
-    duplicateAuthName: "중복된 권한 명이 있습니다. 다른 권한 명을 입력하세요."
+    duplicateAuthName: "중복된 권한 이름이 있습니다. 다른 권한 이름을 입력하세요."
     editDescription: "권한을 추가하거나 조회 및 관리합니다."
     enterAuthId: "권한 아이디를 입력하세요."
-    enterAuthName: "권한 명을 입력하세요."
+    enterAuthName: "권한 이름을 입력하세요."
     invalidToken: "잘못된 토큰입니다."
-    searchPlaceholder: "권한 명 / 권한 설명"
+    searchPlaceholder: "권한 이름 / 권한 설명"
   auth:
     read: "권한 조회"
     create: "권한 등록"
@@ -207,14 +207,14 @@ board:
     boardRegister: "게시판 등록"
     boardView: "게시판 조회"
     category: "분류"
-    categoryName: "분류 명"
+    categoryName: "분류 이름"
     commentCount: "댓글 수"
     commentYn: "댓글 사용 여부"
     count: "게시물 수"
     desc: "게시판 설명"
     edit: "게시글 수정"
     list: "게시판 조회"
-    name: "게시판 명"
+    name: "게시판 이름"
     number: "번호"
     order: "정렬 순서"
     readCount: "조회 수"
@@ -222,7 +222,7 @@ board:
     reply: "답글 등록"
     replyYn: "답글 사용 여부"
     searchBoardPlaceholder: "분류 / 제목 / 작성자"
-    searchPlaceholder: "게시판 명 / 등록자"
+    searchPlaceholder: "게시판 이름 / 등록자"
     title: "제목"
     useYn: "사용 여부"
     view: "게시글 조회"
@@ -231,11 +231,11 @@ board:
     adminSearchDescription: "게시판을 조회 및 관리합니다."
     adminViewDescription: "게시판에 대한 상세 정보를 조회합니다."
     createDescription: "글을 추가 할 수 있습니다."
-    duplicateBoardAdminTitle : "동일한 게시판명이 존재합니다.<br>게시판 명을 확인해주세요."
+    duplicateBoardAdminTitle : "동일한 게시판 이름이 존재합니다.<br>게시판 이름을 확인해주세요."
     editDescription: "게시글을 등록하거나 수정, 삭제합니다."
     enterAttachFileSize: "첨부파일 용량을 0MB 초과 1024MB 이하로 입력하세요."
-    enterBoardTitle: "게시판 명을 입력하세요."
-    enterCategoryName: "분류 명을 입력하세요."
+    enterBoardTitle: "게시판 이름을 입력하세요."
+    enterCategoryName: "분류 이름을 입력하세요."
     modifyDescription: "글을 변경 할 수 있습니다."
     replyDescription: "답글을 추가 할 수 있습니다."
     searchDescription: "게시글을 조회 및 관리합니다."
@@ -298,7 +298,7 @@ cmdb:
       label: "출력용 이름"
       management: "속성항목 관리"
       mappingId: "매핑 아이디"
-      name: "속성항목 명"
+      name: "속성항목 이름"
       option:
         check: "Check"
         code: "코드"
@@ -310,13 +310,13 @@ cmdb:
         session: "세션"
         validate: "유효성"
         value: "Value"
-      searchPlaceholder: "출력용 이름 / 데이터 타입 / 속성항목 명 / 설명"
+      searchPlaceholder: "출력용 이름 / 데이터 타입 / 속성항목 이름 / 설명"
       seq: "정렬 순서"
       type: "데이터 타입"
       view: "속성항목"
     msg:
-      attributeNameUsed: "사용 중인 속성항목 명입니다."
-      enterAttributeName: "속성항목 명을 입력하세요."
+      attributeNameUsed: "사용 중인 속성항목 이름입니다."
+      enterAttributeName: "속성항목 이름을 입력하세요."
       searchDescription: "CI 속성항목을 조회 및 관리합니다."
       selectAttributeType: "데이터 타입을 선택하세요."
       viewDescription: "속성항목에 대한 상세 정보를 조회합니다."
@@ -380,15 +380,15 @@ cmdb:
       attributeList: "속성 목록"
       description: "설명"
       management: "속성그룹 관리"
-      name: "속성그룹 명"
+      name: "속성그룹 이름"
       pClassName: "부모 그룹"
-      searchPlaceholder: "속성그룹 명 / 설명"
+      searchPlaceholder: "속성그룹 이름 / 설명"
       seq: "정렬 순서"
     msg:
       confirmDeleteAttribute: "속성을 삭제하시겠습니까?"
       editDescription: "CI 속성그룹을 조회 및 관리합니다."
       enterAttributeList: "부모 속성목록을 제외한 본인 속성목록은<br>반드시 1개 이상이여야 합니다."
-      enterClassName: "속성그룹 명을 입력하세요."
+      enterClassName: "속성그룹 이름을 입력하세요."
       enterClassSeq: "정렬 순서를 입력하세요."
       relatedTypes: "관련된 CI 유형이 있습니다."
     btn:
@@ -401,14 +401,14 @@ cmdb:
       description: "설명"
       icon: "아이콘"
       management: "CI 유형 관리"
-      name: "유형 명"
+      name: "유형 이름"
       parentType: "부모 유형"
-      searchPlaceholder: "유형 명"
+      searchPlaceholder: "유형 이름"
       seq: "정렬 순서"
     msg:
       enterPType: "부모 유형을 선택하세요."
       enterTypeAlias: "식별자를 입력하세요."
-      enterTypeName: "유형 명을 입력하세요."
+      enterTypeName: "유형 이름을 입력하세요."
       enterTypeSeq: "정렬 순서를 입력하세요."
       searchDescription: "CI 유형을 조회 및 관리합니다."
       selectAvailableClass: "유효한 속성그룹을 선택하세요."
@@ -456,29 +456,29 @@ customCode:
     condition: "조건"
     customCode: "커스텀 코드"
     edit: "커스텀 코드 수정"
-    name: "커스텀 코드 명"
+    name: "커스텀 코드 이름"
     pCode: "부모 코드"
     register: "커스텀 코드 등록"
-    searchColumn: "검색 컬럼 명"
-    searchPlaceholder: "커스텀 코드 명"
+    searchColumn: "검색 컬럼 이름"
+    searchPlaceholder: "커스텀 코드 이름"
     table: "테이블"
-    targetTable: "대상 테이블 명"
+    targetTable: "대상 테이블 이름"
     type: "타입"
-    valueColumn: "값 컬럼 명"
+    valueColumn: "값 컬럼 이름"
     view: "커스텀 코드 조회"
   msg:
     addCondition: "{0}개 이하만 추가 가능합니다."
     confirmDeleteCondition : "조건을 삭제하시겠습니까?"
     customCodeUsed: "사용 중인 사용자 정의 코드입니다."
-    duplicateCustomCodeName: "동일한 사용자 정의 코드 명이 존재합니다."
+    duplicateCustomCodeName: "동일한 사용자 정의 코드 이름이 존재합니다."
     editDescription: "프로세스와 문서양식에서 사용하는 커스텀 코드를 등록하거나 수정, 삭제합니다."
     enterCondition: "조건을 입력하세요."
-    enterCustomCode: "커스텀 코드 명을 입력하세요."
+    enterCustomCode: "커스텀 코드 이름을 입력하세요."
     enterPCode: "부모 코드를 입력하세요."
-    enterSearchColumn: "검색 컬럼 명을 입력하세요."
+    enterSearchColumn: "검색 컬럼 이름을 입력하세요."
     enterSearchTerm: "검색어를 입력하세요."
-    enterTableTarget: "대상 테이블 명을 입력하세요."
-    enterValueColumn: "값 컬럼 명을 입력하세요."
+    enterTableTarget: "대상 테이블 이름을 입력하세요."
+    enterValueColumn: "값 컬럼 이름을 입력하세요."
     pCodeNotExist: "부모 코드가 존재하지 않습니다."
     searchDescription: "프로세스와 문서양식에서 사용하는 커스텀 코드를 조회 및 관리합니다."
     selectNotDuplicateSearchColumn: "조건 항목에 검색 컬럼을 중복 없이 선택하세요."
@@ -593,7 +593,7 @@ download:
     download: "자료실"
     edit: "자료실 수정"
     register: "자료실 등록"
-    searchPlaceholder: "제목 / 작성자 / 첨부파일 명"
+    searchPlaceholder: "제목 / 작성자 / 첨부파일 이름"
     seq: "번호"
     view: "자료실 조회"
     views: "조회 수"
@@ -690,7 +690,7 @@ form:
     searchDescription: "문서양식를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
     unique: "중복된 데이터는 포함할 수 없습니다."
-    duplicateFormName: "중복되는 문서양식 명이 있습니다.<br>다른 문서양식 명을 입력하세요."
+    duplicateFormName: "중복되는 문서양식 이름이 있습니다.<br>다른 문서양식 이름을 입력하세요."
   form: "Form"
   group: "Group"
   row: "Row"
@@ -858,7 +858,7 @@ form:
 # Image
 image:
   label:
-    name: "이미지 명"
+    name: "이미지 이름"
     list: "이미지 관리"
     placeholder: "Select Your Image"
     popupTitle: "이미지 선택"
@@ -1031,7 +1031,7 @@ process:
     title: "Process Designer"
     undo: "작업취소"
   msg:
-    duplicateProcessName: "중복되는 프로세스 명이 있습니다.<br>다른 프로세스 명을 입력하세요."
+    duplicateProcessName: "중복되는 프로세스 이름이 있습니다.<br>다른 프로세스 이름을 입력하세요."
     duplicateData: "동일한 데이터가 존재합니다."
     enterRequired: "{0} 필수값이 비어있습니다.<br>필수값을 입력하세요."
     enterProcessName: "프로세스 이름을 입력하세요."
@@ -1126,12 +1126,12 @@ report:
     description: "설명"
     publishDate: "발행 일시"
     report: "보고서"
-    reportName: "보고서 명"
+    reportName: "보고서 이름"
     search: "보고서 조회"
-    searchPlaceholder: "템플릿 명"
+    searchPlaceholder: "템플릿 이름"
     template: "템플릿"
     templateEdit: "템플릿 수정"
-    templateName: "템플릿 명"
+    templateName: "템플릿 이름"
     templateRegister: "템플릿 등록"
   msg:
     configDescription: "사용자 정의 차트를 이용한 템플릿을 설정합니다."
@@ -1143,7 +1143,7 @@ report:
   template:
     all: "전체"
   tooltip:
-    reportName: "보고서 생성시, 표시되는 보고서 명을 설정한다.<br/>보고서 명을 입력하지 않을 경우 템플릿 명이 보고서 명으로 사용된다."
+    reportName: "보고서 생성시, 표시되는 보고서 이름을 설정한다.<br/>보고서 이름을 입력하지 않을 경우 템플릿 이름이 보고서 이름으로 사용된다."
 
 # Role
 role:
@@ -1154,16 +1154,16 @@ role:
     count: "{0} 개"
     desc: "역할 설명"
     id: "역할 아이디"
-    name: "역할 명"
+    name: "역할 이름"
     referenceCount: "사용자 참조 개수"
     role: "역할"
   msg:
     duplicateRoleId: "중복되는 아이디가 있습니다. 다른 역할 아이디를 입력하세요."
-    duplicateRoleName: "중복된 역할 명이 있습니다. 다른 역할 명을 입력하세요."
+    duplicateRoleName: "중복된 역할 이름이 있습니다. 다른 역할 이름을 입력하세요."
     editDescription: "역할을 추가하거나 조회 및 관리합니다."
     enterRoleId: "역할 아이디를 입력하세요."
-    enterRoleName: "역할 명을 입력하세요."
-    searchPlaceholder: "역할 명 / 역할 설명"
+    enterRoleName: "역할 이름을 입력하세요."
+    searchPlaceholder: "역할 이름 / 역할 설명"
     selectAuth: "권한을 선택하세요."
 
 # Scheduler
@@ -1186,13 +1186,13 @@ scheduler:
     historyNo: "No"
     immediatelyExecute: "즉시 실행"
     lastExecuteTime: "마지막 실행 시각"
-    name: "스케줄 명"
+    name: "스케줄 이름"
     query: "쿼리"
     register: "스케줄 등록"
     result: "결과"
     schedule: "스케줄"
     scheduler: "스케줄러"
-    searchPlaceholder: "스케줄 명 / 작업 유형 / 클래스 / 실행 유형"
+    searchPlaceholder: "스케줄 이름 / 작업 유형 / 클래스 / 실행 유형"
     src: 경로
     status: "상태"
     taskType: "작업 유형"
@@ -1229,7 +1229,7 @@ token:
     all: "전체 문서"
     assignee: "담당자"
     completed: "처리 완료"
-    elementName: "업무 명"
+    elementName: "업무 이름"
     endDt: "완료 일시"
     history: "처리 이력"
     information: "문서정보"
@@ -1404,17 +1404,17 @@ file:
 pattern:
   label:
     desc: "패턴 설명"
-    name: "패턴 명"
+    name: "패턴 이름"
     pattern: "패턴"
     type: "패턴 타입"
     value: "패턴 값"
   msg:
-    duplicatePatternName: "중복되는 패턴 명이 있습니다. 다른 패턴 명을 입력하세요."
+    duplicatePatternName: "중복되는 패턴 이름이 있습니다. 다른 패턴 이름을 입력하세요."
     editDescription: "패턴을 추가하거나 조회 및 관리합니다."
-    enterPatternName: "패턴 명을 입력하세요."
+    enterPatternName: "패턴 이름을 입력하세요."
     enterPatternValue: "패턴 값을 입력하세요."
     enterPatternSequenceValue: "패턴 값을 1이상 4이하로 입력하세요."
-    searchPlaceholder: "패턴 명"
+    searchPlaceholder: "패턴 이름"
     usedPattern: "해당 패턴을 사용 중입니다."
   type:
     date: "Date"
@@ -1427,7 +1427,7 @@ rule:
     date: "최근 날짜"
     desc: "문서번호 설명"
     firstPattern: "패턴 1"
-    name: "문서번호 명"
+    name: "문서번호 이름"
     pattern: "패턴"
     rule: "문서번호"
     secondPattern: "패턴 2"
@@ -1435,10 +1435,10 @@ rule:
     value: "최근 값"
   msg:
     addPattern: "{0}개 이하만 추가 가능합니다."
-    duplicateRuleName: "중복되는 문서번호 명이 있습니다. 다른 문서번호 명을 입력하세요."
+    duplicateRuleName: "중복되는 문서번호 이름이 있습니다. 다른 문서번호 이름을 입력하세요."
     editDescription: "문서번호를 추가하거나 조회 및 관리한다."
-    enterRuleName: "문서번호 명을 입력하세요."
-    searchPlaceholder: "문서번호 명"
+    enterRuleName: "문서번호 이름을 입력하세요."
+    searchPlaceholder: "문서번호 이름"
     selectSequence: "Sequence를 최소 하나 이상 포함해야 합니다."
     usedRule: "해당 문서번호를 사용 중입니다."
 
