--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -59,7 +59,7 @@ common:
     emptyData: "-"
   msg:
     confirmDelete: "정말 삭제하시겠습니까?"
-    confirmNotSave: "저장되지 않은 변경사항이 있습니다. 저장하지 않고 이동하시겠습니까?"
+    confirmNotSave: "저장되지 않은 수정사항이 있습니다. 저장하지 않고 이동하시겠습니까?"
     dataSelect: "{0} 을(를) 선택하세요."
     delete: "삭제되었습니다."
     deleteTartget: "삭제 대상을 선택하세요."
@@ -85,7 +85,7 @@ common:
     selectBeforeTime: "{0} 시간 이전으로 선택하세요."
     selectColor: "색상을 선택하세요."
     success: "성공하였습니다."
-    update: "변경되었습니다."
+    update: "수정되었습니다."
   code:
     token:
       status:
@@ -122,12 +122,12 @@ auth:
   auth:
     read: "권한 조회"
     create: "권한 등록"
-    update: "권한 변경"
+    update: "권한 수정"
     delete: "권한 삭제"
   class:
     read: "CMDB 속성그룹 조회"
     create: "CMDB 속성그룹 등록"
-    update: "CMDB 속성그룹 변경"
+    update: "CMDB 속성그룹 수정"
     delete: "CMDB 속성그룹 삭제"
   code:
     read: "코드 조회"
@@ -141,7 +141,7 @@ auth:
     delete: "사용자 정의 코드 삭제"
   document:
     read: "신청서 조회"
-    create: "신청서 등록"
+    create: "신청서 작성"
   download:
     read: "자료실 조회"
     create: "자료실 등록"
@@ -150,22 +150,22 @@ auth:
   faq:
     read: "FAQ 조회"
     create: "FAQ 등록"
-    update: "FAQ 변경"
+    update: "FAQ 수정"
     delete: "FAQ 삭제"
   form:
     read: "문서양식 조회"
     create: "문서양식 등록"
-    update: "문서양식 변경"
+    update: "문서양식 수정"
     delete: "문서양식 삭제"
   notice:
     read: "공지사항 조회"
     create: "공지사항 등록"
-    update: "공지사항 변경"
+    update: "공지사항 수정"
     delete: "공지사항 삭제"
   process:
     read: "프로세스 조회"
     create: "프로세스 등록"
-    update: "프로세스 변경"
+    update: "프로세스 수정"
     delete: "프로세스 삭제"
   service:
     readAll: "서비스 요청 전체 조회"
@@ -173,11 +173,11 @@ auth:
     create: "서비스 요청 작성"
   token:
     read: "처리할 문서 조회"
-    create: "처리할 문서 등록"
+    create: "처리할 문서 작성"
   user:
     read: "사용자 조회"
     create: "사용자 등록"
-    update: "사용자 변경"
+    update: "사용자 수정"
     delete: "사용자 삭제"
 
 #Authentication
@@ -218,11 +218,11 @@ board:
     number: "번호"
     order: "정렬 순서"
     readCount: "조회 수"
-    register: "게시글 등록"
-    reply: "답글 등록"
+    register: "게시글 작성"
+    reply: "답글 작성"
     replyYn: "답글 사용 여부"
     searchBoardPlaceholder: "분류 / 제목 / 작성자"
-    searchPlaceholder: "게시판 이름 / 등록자"
+    searchPlaceholder: "게시판 이름 / 작성자"
     title: "제목"
     useYn: "사용 여부"
     view: "게시글 조회"
@@ -232,15 +232,15 @@ board:
     adminViewDescription: "게시판에 대한 상세 정보를 조회합니다."
     createDescription: "글을 추가 할 수 있습니다."
     duplicateBoardAdminTitle : "동일한 게시판 이름이 존재합니다.<br>게시판 이름을 확인해주세요."
-    editDescription: "게시글을 등록하거나 수정, 삭제합니다."
+    editDescription: "게시글을 작성하거나 수정, 삭제합니다."
     enterAttachFileSize: "첨부파일 용량을 0MB 초과 1024MB 이하로 입력하세요."
     enterBoardTitle: "게시판 이름을 입력하세요."
     enterCategoryName: "분류 이름을 입력하세요."
-    modifyDescription: "글을 변경 할 수 있습니다."
+    modifyDescription: "글을 수정 할 수 있습니다."
     replyDescription: "답글을 추가 할 수 있습니다."
     searchDescription: "게시글을 조회 및 관리합니다."
     viewDescription: "게시글에 대한 상세 정보를 조회합니다."
-    createCategory: "분류 항목을 등록해 주세요."
+    createCategory: "분류 항목을 추가해 주세요."
 
 # Chart
 chart:
@@ -326,7 +326,7 @@ cmdb:
   ci:
     actionType:
       delete: "삭제"
-      modify: "변경"
+      modify: "수정"
       read: "조회"
       register: "신규"
     label:
@@ -339,7 +339,7 @@ cmdb:
       description: "CI 설명"
       existing: "기존"
       export: "내보내기"
-      history: "변경 이력"
+      history: "수정 이력"
       name: "CI 이름"
       new: "신규"
       relatedDocument: "관련 문서"
@@ -354,7 +354,7 @@ cmdb:
       tagPlaceholder: "#태그"
       type: "CI 유형"
       register: "CI 등록"
-      update: "CI 변경"
+      update: "CI 수정"
       view: "CI 상세 조회"
       relation: "연관 관계"
       relationType: "연관 관계 타입"
@@ -554,7 +554,7 @@ document:
     numberingRule: "문서번호 규칙"
     print: "신청서 인쇄"
     process: "프로세스"
-    register: "신청서 등록"
+    register: "신청서 작성"
     searchPlaceholder: "문서 이름 / 문서 설명"
     status: "신청서 상태"
     tempDocument: "임시 신청서"
@@ -562,7 +562,7 @@ document:
     write: "신청서 작성"
   msg:
     adminSearchDescription: "프로세스와 문서양식을 조합하여 업무흐름을 조회 및 관리합니다."
-    changeStatusEnabled: "상태를 사용으로 변경 하시겠습니까?<br/>임시 상태로 작성된 문서 모두 삭제 됩니다."
+    changeStatusEnabled: "상태를 사용으로 수정 하시겠습니까?<br/>임시 상태로 작성된 문서 모두 삭제 됩니다."
     checkDocument: "문서를 다시 확인하세요."
     checkDuplication: "이미 해당 문서와 프로세스로 생성된 업무흐름이 존재합니다."
     enterBusinessFlowColor: "업무흐름 색상을 입력하세요."
@@ -593,7 +593,7 @@ download:
     download: "자료실"
     edit: "자료실 수정"
     register: "자료실 등록"
-    searchPlaceholder: "제목 / 작성자 / 첨부파일 이름"
+    searchPlaceholder: "제목 / 등록자 / 첨부파일 이름"
     seq: "번호"
     view: "자료실 조회"
     views: "조회 수"
@@ -629,7 +629,7 @@ faq:
     title: "제목"
     view: "FAQ 조회"
   msg:
-    duplicateTitleInCategory: "같은 분류에 동일한 제목이 있습니다.<br>분류 또는 제목을 변경해 주세요."
+    duplicateTitleInCategory: "같은 분류에 동일한 제목이 있습니다.<br>분류 또는 제목을 수정해 주세요."
     editDescription: "FAQ를 등록하거나 수정, 삭제합니다."
     portalDescription: "FAQ를 조회합니다."
     searchDescription: "FAQ를 조회 및 관리합니다."
@@ -668,7 +668,7 @@ form:
     state: "상태"
     templatesList: "템플릿 목록"
     title: "Form Designer"
-    update: "문서양식 변경"
+    update: "문서양식 수정"
     undo: "작업 취소"
   msg:
     enterFormName: "양식이름을 입력하세요."
@@ -865,7 +865,7 @@ image:
     upload: "이미지 업로드"
   msg:
     existNotAllowedExtension: "허용하지 않는 확장자의 파일이 있습니다. 제외하고 업로드를 진행하시겠습니까?"
-    failedRename: "파일명 변경이 실패하였습니다. 동일한 파일명이 있거나 수정 권한이 있는지 확인하세요."
+    failedRename: "파일명 수정이 실패하였습니다. 동일한 파일명이 있거나 수정 권한이 있는지 확인하세요."
     fileSelect: "파일을 선택하세요."
     registrationSuccess: "이미지 등록에 성공하였습니다"
     searchDescription: "문서양식에서 사용할 이미지를 추가하거나 조회 및 관리합니다."
@@ -934,7 +934,7 @@ menu:
     form: "문서양식"
     image: "이미지 관리"
     numberingPattern: "패턴"
-    numberingRule: "문서번호"
+    numberingRule: "문서번호 규칙"
     parent: "업무흐름 관리"
     process: "프로세스"
     workflowAdmin: "업무흐름"
@@ -958,7 +958,7 @@ notice:
     popUpPeriod: "팝업 기간"
     popUpPeriodToday: "오늘 하루 이창을 열지 않음"
     register: "공지사항 등록"
-    searchPlaceholder: "제목 / 작성자"
+    searchPlaceholder: "제목 / 등록자"
     startDateTime: "시작일시"
     topNoticeSettings: "상단 공지 설정"
     view: "공지사항 조회"
@@ -967,16 +967,16 @@ notice:
     alreadyDeleted: "이미 삭제된 게시물 입니다."
     checkPopHeightRange: "높이는 500px부터 1000px 사이의 값만 입력 가능합니다."
     checkPopWidthRange: "넓이는 500px부터 1000px 사이의 값만 입력 가능합니다."
-    compareWithPopUpValue: "팝업 알림 시작일이 종료일보다 크거나 같습니다."
-    compareWithTopNoticeValue: "상단 공지 시작일이 종료일보다 크거나 같습니다."
+    compareWithPopUpValue: "팝업 알림 시작일이 종료일시보다 크거나 같습니다."
+    compareWithTopNoticeValue: "상단 공지 시작일이 종료일시보다 크거나 같습니다."
     editDescription: "공지사항을 등록하거나 수정, 삭제합니다."
-    enterPopEndDt: "팝업 종료일을 입력하세요."
+    enterPopEndDt: "팝업 종료일시을 입력하세요."
     enterPopHeight: "높이를 입력하세요."
     enterPopStrtDt: "팝업 시작일을 입력하세요."
     enterPopWidth: "넓이를 입력하세요."
     enterToDt: "검색 종료 날짜를 입력하세요."
-    enterTopNoticeEndDt: "상단 공지 종료일을 입력하세요."
-    enterTopNoticeStrtDt: "상단 공지 시작일을 입력하세요."
+    enterTopNoticeEndDt: "상단 공지 종료일시을 입력하세요."
+    enterTopNoticeStrtDt: "상단 공지 시작일시을 입력하세요."
     portalDescription: "공지사항을 조회합니다."
     searchDescription: "공지사항을 조회 및 관리합니다."
     viewDescription: "공지사항에 대한 상세 정보를 조회합니다."
@@ -1043,7 +1043,7 @@ process:
   title:
     preview: "Zenius ITSM : 프로세스 미리보기"
     processMap: "Zenius ITMS : 프로세스 맵"
-    update: "Zenius ITSM : 프로세스 변경"
+    update: "Zenius ITSM : 프로세스 수정"
   status:
     destroy: "폐기"
     edit: "편집"
@@ -1236,8 +1236,8 @@ token:
     list: "문서함"
     print: "처리할 문서 인쇄"
     relatedInstance: "관련 문서"
-    relatedInstancePlaceholder: "신청서 이름/ 등록자"
-    searchPlaceholder: "문서번호 / 등록자 / 내용"
+    relatedInstancePlaceholder: "신청서 이름/ 작성자"
+    searchPlaceholder: "규칙 이름 / 작성자 / 내용"
     startDt: "시작 일시"
     tagPlaceHolder: "#태그"
     view: "문서 조회"
@@ -1425,22 +1425,22 @@ pattern:
 rule:
   label:
     date: "최근 날짜"
-    desc: "문서번호 설명"
+    desc: "규칙 설명"
     firstPattern: "패턴 1"
-    name: "문서번호 이름"
+    name: "문서번호 규칙 이름"
     pattern: "패턴"
-    rule: "문서번호"
+    rule: "문서번호 규칙"
     secondPattern: "패턴 2"
     thirdPattern: "패턴 3"
     value: "최근 값"
   msg:
     addPattern: "{0}개 이하만 추가 가능합니다."
-    duplicateRuleName: "중복되는 문서번호 이름이 있습니다. 다른 문서번호 이름을 입력하세요."
-    editDescription: "문서번호를 추가하거나 조회 및 관리한다."
-    enterRuleName: "문서번호 이름을 입력하세요."
-    searchPlaceholder: "문서번호 이름"
+    duplicateRuleName: "중복되는 문서번호 규칙 이름이 있습니다. 다른 문서번호 규칙 이름을 입력하세요."
+    editDescription: "문서번호 규칙를 추가하거나 조회 및 관리한다."
+    enterRuleName: "문서번호 규칙 이름을 입력하세요."
+    searchPlaceholder: "문서번호 규칙 이름"
     selectSequence: "Sequence를 최소 하나 이상 포함해야 합니다."
-    usedRule: "해당 문서번호를 사용 중입니다."
+    usedRule: "해당 문서번호 규칙을 사용 중입니다."
 
 # Product
 product:
