#11331 [스케쥴러] 작업유형이 class일경우 없는 class를 넣었는데 결과는 처리완료로 뜬다. -> 일감 분석 및 구현 진행

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1191,6 +1191,7 @@ scheduler:
     searchDescription: "Register and manage repetitive tasks."
     useSchedule: "Schedule in use."
     jarNotExist: "JAR file does not exist."
+    classNotExist: "ClASS file does not exist."
   status:
     true: "Use"
     false: "UnUsed"
