#11331 [스케쥴러] 작업유형이 class일경우 없는 class를 넣었는데 결과는 처리완료로 뜬다. -> 일감 분석 및 구현 진행

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1192,6 +1192,7 @@ scheduler:
     searchDescription: "반복적인 작업을 등록하여 관리합니다."
     useSchedule: "사용중인 스케줄입니다."
     jarNotExist: "JAR 파일이 존재하지 않습니다."
+    classNotExist: "Class 파일이 존재하지 않습니다."
   status:
     true: "사용"
     false: "미사용"
