문구 추가 및 해당 설명 문구 변경

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -314,6 +314,7 @@ cmdb:
       searchDescription: "CI Attribute manage posts."
       selectAttributeType: "Please select the type."
       viewDescription: "Inquires detailed information about the attribute."
+      editDescription: "Register, modify, or delete information on attribute."
     btn:
       import: "Import"
       export: "Export"
