--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -314,6 +314,8 @@ cmdb:
       searchDescription: "CI Attribute manage posts."
       selectAttributeType: "Please select the type."
       viewDescription: "Inquires detailed information about the attribute."
+      maxLength: "Please enter max length below 999."
+      comepareWithMaxLength: "Enter a number max length is greater than min length."
     btn:
       import: "Import"
       export: "Export"
