--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -314,6 +314,8 @@ cmdb:
       searchDescription: "CI 속성항목을 조회 및 관리합니다."
       selectAttributeType: "데이터 타입을 선택하세요."
       viewDescription: "속성항목에 대한 상세 정보를 조회합니다."
+      maxLength: "최대길이는 999 이하로 입력하세요."
+      comepareWithMaxLength: "최대길이는 최소길이보다 큰 수를 입력하세요."
     btn:
       import: "가져오기"
       export: "내보내기"
