#11412 - 크론 안내문 변경( 6자리 입력 가능 )

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1214,14 +1214,13 @@ scheduler:
     fixedRate: "• FIXED_RATE는 이전 작업이 수행되기 시작한 시점으로부터 고정된 시간을 설정한다.<br/><br/>
    • 밀리 세컨드(millisecond, ms)를 기본 단위로 지정하며 1000 밀리 세컨드를 1초로 규정한다.<br/><br/>
    • 최소 60000 밀리 세컨드 (1분) 이상 최대 10자리의 숫자 범위까지 입력이 가능하다."
-    cron: "• 기본적으로 ' * * * * * * * ' 의 형식을 가지며, 총 7개의 필드로 구성된다.<br/><br/>
+    cron: "• 기본적으로 ' * * * * * * ' 의 형식을 가지며, 총 6개의 필드로 구성된다.<br/><br/>
    • 첫 번째 필드 : 초 (Secods)를 정의하며 0 ~ 59의 허용범위를 가진다.<br/><br/>
    • 두 번째 필드 : 분 (Minutes)을 정의하며 0 ~ 59의 허용범위를 가진다.<br/><br/>
    • 세 번째 필드 : 시 (Hours)를 정의하며 0 ~ 23의 허용범위를 가진다.<br/><br/>
    • 네 번째 필드 : 일 (Day of month)을 정의하며 1 ~ 31의 허용범위를 가진다.<br/><br/>
    • 다섯 번째 필드 : 월 (Month)을 정의하며 1 ~ 12 또는 JAN ~ DEC의 허용범위를 가진다.<br/><br/>
-   • 여섯 번째 필드 : 요일 (Week)을 정의하며 0 ~ 6 또는 SUN ~ SAT의 허용범위를 가진다.<br/><br/>
-   • 일곱 번째 필드 : 년 (Year)을 정의하며 생략 또는 1970 ~ 2099의 허용범위를 가진다."
+   • 여섯 번째 필드 : 요일 (Week)을 정의하며 0 ~ 6 또는 SUN ~ SAT의 허용범위를 가진다.
 
 # Token
 token:
