#11412 - 크론 안내문 변경( 6자리 입력 가능 )

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1220,7 +1220,7 @@ scheduler:
    • 세 번째 필드 : 시 (Hours)를 정의하며 0 ~ 23의 허용범위를 가진다.<br/><br/>
    • 네 번째 필드 : 일 (Day of month)을 정의하며 1 ~ 31의 허용범위를 가진다.<br/><br/>
    • 다섯 번째 필드 : 월 (Month)을 정의하며 1 ~ 12 또는 JAN ~ DEC의 허용범위를 가진다.<br/><br/>
-   • 여섯 번째 필드 : 요일 (Week)을 정의하며 0 ~ 6 또는 SUN ~ SAT의 허용범위를 가진다.
+   • 여섯 번째 필드 : 요일 (Week)을 정의하며 0 ~ 6 또는 SUN ~ SAT의 허용범위를 가진다."
 
 # Token
 token:
