#11412 - 크론 표현식 6개 미만일 때 반복문 이용으로 문자열 채우기
 - 6개 초과시 알람문자 추가.

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1200,6 +1200,7 @@ scheduler:
     scheduleDescription: "Check the schedule details and history."
     searchDescription: "Register and manage repetitive tasks."
     useSchedule: "Schedule in use."
+    cronValue : "Cron can be entered up to 6 fields."
   status:
     true: "Use"
     false: "UnUsed"
