#11358 커스텀 코드 > 세션값 선택 위치 조정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -454,6 +454,7 @@ customCode:
     register: "Custom Code Register"
     searchColumn: "Search Column Name"
     searchPlaceholder: "Custom Code Name"
+    sessionKey: "Session Key"
     table: "Table"
     targetTable: "Target Table Name"
     type: "Type"
