--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -455,6 +455,7 @@ customCode:
     register: "커스텀 코드 등록"
     searchColumn: "검색 컬럼 이름"
     searchPlaceholder: "커스텀 코드 이름"
+    sessionKey: "세션 키"
     table: "테이블"
     targetTable: "대상 테이블 이름"
     type: "타입"
