--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -453,11 +453,12 @@ customCode:
     customCode: "Custom Code"
     edit: "Custom Code Edit"
     name: "Custom Code Name"
+    notSelect: "Not Select"
     pCode: "Parent Code"
     register: "Custom Code Register"
     searchColumn: "Search Column Name"
     searchPlaceholder: "Custom Code Name"
-    sessionKey: "Session Key"
+    sessionKey: "Default when using session"
     table: "Table"
     targetTable: "Target Table Name"
     type: "Type"
