#11412 - 정규식 및 중간 공백 시 배열로 저장되는 것 방지

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1201,6 +1201,7 @@ scheduler:
     searchDescription: "Register and manage repetitive tasks."
     useSchedule: "Schedule in use."
     cronValue : "Cron can be entered up to 6 fields."
+    cronError : "Enter the correct Cron expression."
   status:
     true: "Use"
     false: "UnUsed"
